<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/book_card"
        android:layout_width="@dimen/small_book_width"
        android:layout_height="@dimen/small_book_height"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/item_book_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/book_cover_image"
            android:src="@drawable/ic_scan" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="12dp"
        android:layout_marginStart="5dp"
        android:text="@string/title"
        android:layout_toEndOf="@id/book_card"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/item_book_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_book_description"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@id/book_card"
        android:text="@string/owned_by_you" />

    <TextView
        android:id="@+id/item_book_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@id/book_card"
        android:layout_below="@id/item_book_title"
        android:text="@string/long_description"
        android:maxLength="70"/>

    <TextView
        android:id="@+id/item_book_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/book_card"
        android:layout_marginStart="5dp"
        android:layout_marginTop="122dp"
        android:layout_toEndOf="@+id/book_card"
        android:text="@string/status"
        android:textSize="15sp"/>

</RelativeLayout>
