<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SignUpActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/signUpToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="0dp"
            app:title="">

            <ImageView
                android:id="@+id/signUpBackBtn"
                android:layout_width="33dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/cancel"
                app:tint="@color/colorUnselected">

            </ImageView>

            <TextView
                android:id="@+id/signUpPageTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:textSize="18sp"
                android:letterSpacing="0.02"
                android:textColor="@color/textBlack"
                android:text="@string/signUpPageTitle"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

            <TextView
                android:id="@+id/signUpSignUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:textSize="18sp"
                android:text="@string/signUp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/colorAccent" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/signUpProfilePictureField"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_user_foreground"
                android:contentDescription="@string/book_cover_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signUpChangePhotoBtn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:text="@string/change_photo"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpFirstNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/firstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpFirstNameField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpLastNameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/lastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpLastNameField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpUsernameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpUsernameField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpPhoneNumberContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/phoneNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPhoneNumberField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpEmailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpEmailField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />
<!--                android:focusable="false"-->
<!--                android:clickable="false"-->
<!--                android:longClickable="false"-->

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUpPasswordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true"
                android:gravity="center_vertical"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPasswordField"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
