<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/coordLayout"
tools:context=".activity.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

        <RelativeLayout
            android:id="@+id/profileExistingFragmentToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="5dp">

            <TextView
                android:id="@+id/profileExistingFullName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:letterSpacing="0.02"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/firstlastname"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="@color/textBlack"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:paddingTop="4dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profileExistingProfilePictureCardView"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:shape="ring"
                    app:cardCornerRadius="75dp"
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/profileExistingProfilePicture"
                        android:layout_width="match_parent"
                        android:shape="ring"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/profile_image"
                        android:src="@mipmap/ic_user_foreground" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/profileExistingSignOut"
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_sign_out"
                    android:contentDescription="@string/signOut"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/profileExistingUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4sp"
                android:gravity="center_horizontal"
                android:text="@string/username"
                android:textColor="@color/textBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileExistingEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileExistingEditBtn"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:letterSpacing="0.05"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/round"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:text="@string/edit"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp" />

        </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/profileExistingTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        app:tabSelectedTextColor="@color/colorAccent"
        app:tabTextColor="@color/colorUnselected">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileExistingOwnerTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileExistingBorrowerTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrower" />
    </com.google.android.material.tabs.TabLayout>

</com.google.android.material.appbar.AppBarLayout>

<androidx.viewpager.widget.ViewPager
    android:id="@+id/profileExistingViewPager"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>